@@ -702,8 +702,9 @@ not set the description attribute for those tags.</p>
   <tr>
     <td valign="top">description</td>
     <td valign="top">Description for tag (e.g. <code>To do:</code>)</td>
-    <td align="center" valign="top">No, the name will be used as a description
-      if this is not specified.</td>
+    <td align="center" valign="top">
+      No, the javadoc executable will pick a default if this is not specified.
+    </td>
   </tr>
   <tr>
     <td valign="top">enabled</td>
